# unimusic-sync

./: .swiftformat  Cargo.toml  Package.swift  README.md  build-wasm.sh  rust-toolchain.toml  update-release-version.sh
.github/actions/setup-neon/: action.yml
.github/workflows/: android-release.yml  android.yml  ios-release.yml  ios.yml  node-build.yml  node-release.yml  rust.yml
.swiftpm/xcode/xcshareddata/xcschemes/: UniMusicSync.xcscheme
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/app/unimusic/sync/demo/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/ianthetechie/foobar/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/unimusic/sync/: MainActivity.kt
android/app/src/main/java/app/unimusic/sync/demo/: MainActivity.kt
android/app/src/main/java/app/unimusic/sync/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/app/unimusic/sync/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/app/unimusic/sync/: ExampleUnitTest.kt
android/app/src/test/java/app/unimusic/sync/demo/: ExampleUnitTest.kt
android/core/: build.gradle
android/core/src/androidTest/java/app/unimusic/sync/: UniMusicSyncTest.kt
android/core/src/androidTest/java/app/unimusic/sync/core/: UniMusicSyncTest.kt
android/core/src/main/java/app/unimusic/core/: UniMusicSync.kt
android/core/src/main/java/app/unimusic/sync/: UniMusicSync.kt
android/gradle/: libs.versions.toml
apple/Sources/UniFFI/: unimusic_sync.swift
apple/Sources/UniMusicSync/: UniMusicSync.swift
apple/Tests/UniMusicSyncTests/: UniMusicSyncTests.swift
node/: Cargo.toml  Cross.toml  README.md  package.json  pnpm-lock.yaml
node/crates/sync/: Cargo.toml
node/crates/sync/src/: lib.rs
node/src/: index.cts  load.cts
rust/: Cargo.toml  build-ios.sh
rust/uniffi-bindgen/: Cargo.toml
rust/uniffi-bindgen-swift/: Cargo.toml
rust/unimusic-sync/: Cargo.toml
rust/unimusic-sync/src/: errors.rs  lib.rs  node_storage.rs  types.rs
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/sync/: Cargo.toml
src/sync/src/: lib.rs
