[package]
name = "unimusic-sync"
version = "0.1.10"
edition.workspace = true

[lib]
name = "unimusic_sync"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
cfg-if = "^1.0.0"
rand = "0.8"
log = "^0.4"
env_logger = "^0.11"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

thiserror = "^2.0.12"

tokio = "^1.45.0"
tokio-stream = "^0.1.17"

iroh = { version = "^0.35.0", features = [
    "discovery-local-network",
    "discovery-pkarr-dht",
] }
iroh-blobs = { version = "^0.35.0" }
iroh-docs = { version = "^0.35.0", features = ["rpc"] }
iroh-gossip = { version = "^0.35.0" }


uniffi = { workspace = true, features = ["tokio"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
